fix: register-as alignment.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,28 @@
     @apply grid-cols-4;
   }
 }
+
+.Role_selection {
+  display: flex;
+  overflow-x: auto;
+  gap: 16px;
+  padding-bottom: 16px;
+  scroll-snap-type: x mandatory;
+  width: 100%;
+  padding: 0 16px;
+  scroll-behavior: smooth;
+}
+
+@media screen and (min-width: 440px) {
+  .Role_selection {
+    justify-content: center;
+    overflow-x: visible;
+  }
+}
+
+/* Fine-tune for medium screens */
+@media screen and (min-width: 768px) {
+  .Role_selection {
+    gap: 32px;
+  }
+}
